--- a/script_03.Rmd
+++ b/script_03.Rmd
@@ -33,13 +33,15 @@ sep_old <-
   read_excel("old_data/class_enrollment_summary_by_term_9-1-2020.xlsx", 
              skip = 3) %>% 
   clean_names() %>% 
-  filter(! is.na(course_title)) %>% 
+  filter(! is.na(course_title)) %>%
   select(-grad, -non_degree, -x_reg, -vus, -employee, 
          -withdraw, -total, -instructor_full_name, -course_section_code) %>%
   rename(id = course_id,
          title = course_title,
          name = course_name,
-         department = course_department) %>% 
+         department = course_department) %>%
+  group_by(id, title, name, department) %>%
+  summarize(u_grad = sum(u_grad), .groups = "drop") %>%
   filter(u_grad > 10)
 
 # But this is not correct! Look for Gov 50: Data. What do you see? What can you
@@ -53,6 +55,24 @@ sep_old <-
 
 **Prompt:** Read in and clean the new data, creating an object called `sep_new`. 
 
+```{r}
+
+sep_new <-
+  read_excel("new_data/class_enrollment_summary_by_term_9-21-2020.xlsx", skip = 3) %>%
+  clean_names() %>% 
+  filter(! is.na(course_title)) %>%
+  select(-grad, -non_degree, -x_reg, -vus, -employee, 
+         -withdraw, -total, -instructor_full_name, -course_section_code) %>%
+  rename(id = course_id,
+         title = course_title,
+         name = course_name,
+         department = course_department) %>% 
+  group_by(id, title, name, department) %>%
+  summarize(u_grad = sum(u_grad), .groups = "drop") %>%
+  rename(u_grad_new = u_grad) %>%
+  filter(u_grad_new > 10)
+  
+```
 
 
 ### Scene 2
@@ -61,18 +81,29 @@ sep_old <-
 
 Before we start on the model, Wisdom suggests we should:
 
++ What factors lead to drops in enrollment - large classes, department, professor?
 
 After we have a model, Temperance suggests we should:
 
++ Uncertainty on why people dropped a course - did they have too much work (individual problem) or did they not like the class (group problem)?
 
++ Data is still changing, deadline has passed but not impossible to change courses.
 
 ### Scene 3
 
 **Prompt:** Which classes had the biggest increases and decreases in undergraduate enrollments between September 1 and today? Make a graphic that shows the 5 biggest increases and decreases. Make it look nice.
 
+```{r}
 
+sep2 <- sep_new %>%
+  inner_join(sep_old) %>%
+  mutate(u_grad_diff = u_grad_new - u_grad) %>%
+  arrange(u_grad_diff)
 
-
+top_five <- head(sep2, 5)
+bottom_five <- tail(sep2, 5)
+  
+```
 
 ## Scene 4
 
